--- a/NeoCom.Infinity.12/tsconfig.json
+++ b/NeoCom.Infinity.12/tsconfig.json
@@ -1,38 +1,26 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": ".",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
-    "module": "es2015",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
+    "baseUrl": "./src",
+    "paths": {
+      "*": [
+        "*",
+        "app/*"
+      ]
+    },
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
       "es2017",
       "dom"
-    ],
-    "paths": {
-      "src/*": [
-        "src/*"
-      ],
-      "app/*": [
-        "src/app/*"
-      ],
-      "@app/*": [
-        "src/app/*"
-      ],
-      "NeoComLib": [
-        "dist/neocom-lib"
-      ],
-      "NeoComLib/*": [
-        "dist/neocom-lib/*"
-      ]
-    }
+    ]
   }
 }
