-[LOGIN] The login pages are out of the application modules and the authorization cover. Really they are an application outside the authenticate NeoCom application that really starts with the ValidationPage. Implement it as two applications separated and with different url using the new Angular 6 multiproject configuration.
Former-commit-id: 0c9978b9007cdb631f90c6e30cebf6ff9074ddbf

--- a/NeoCom.Infinity/angular.json
+++ b/NeoCom.Infinity/angular.json
@@ -125,6 +125,129 @@
           }
         }
       }
+    },
+    "NeoCom-Login": {
+      "root": "projects/NeoCom-Login/",
+      "sourceRoot": "projects/NeoCom-Login/src",
+      "projectType": "application",
+      "prefix": "lgn",
+      "schematics": {
+        "@schematics/angular:component": {
+          "styleext": "scss"
+        }
+      },
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/NeoCom-Login",
+            "index": "projects/NeoCom-Login/src/index.html",
+            "main": "projects/NeoCom-Login/src/main.ts",
+            "polyfills": "projects/NeoCom-Login/src/polyfills.ts",
+            "tsConfig": "projects/NeoCom-Login/tsconfig.app.json",
+            "assets": [
+              "projects/NeoCom-Login/src/favicon.ico",
+              "projects/NeoCom-Login/src/assets"
+            ],
+            "styles": [
+              "projects/NeoCom-Login/src/styles.scss"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "projects/NeoCom-Login/src/environments/environment.ts",
+                  "with": "projects/NeoCom-Login/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "NeoCom-Login:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "NeoCom-Login:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "NeoCom-Login:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/NeoCom-Login/src/test.ts",
+            "polyfills": "projects/NeoCom-Login/src/polyfills.ts",
+            "tsConfig": "projects/NeoCom-Login/tsconfig.spec.json",
+            "karmaConfig": "projects/NeoCom-Login/karma.conf.js",
+            "styles": [
+              "projects/NeoCom-Login/src/styles.scss"
+            ],
+            "scripts": [],
+            "assets": [
+              "projects/NeoCom-Login/src/favicon.ico",
+              "projects/NeoCom-Login/src/assets"
+            ]
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/NeoCom-Login/tsconfig.app.json",
+              "projects/NeoCom-Login/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "NeoCom-Login-e2e": {
+      "root": "projects/NeoCom-Login-e2e/",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "projects/NeoCom-Login-e2e/protractor.conf.js",
+            "devServerTarget": "NeoCom-Login:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "NeoCom-Login:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": "projects/NeoCom-Login-e2e/tsconfig.e2e.json",
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
   "defaultProject": "NeoComInfinity"
