--- a/NeoCom.Infinity/package.json
+++ b/NeoCom.Infinity/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "neo-com-infinity",
-  "version": "0.0.0",
+  "name": "NeoCom-Infinity",
+  "version": "0.14.0",
+  "author": "Adam Antinoo",
+  "copyright": "@2018, 2019 - Edless Dimensions Ltd. All rights reserved.",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "startdev": "ng serve --preserve-symlinks --public-host neocom.infinity.org --proxy-config proxy.conf.json"
   },
   "private": true,
   "dependencies": {
@@ -20,6 +23,18 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ionic/storage": "^2.1.3",
+    "ionic-angular": "3.9.2",
+    "ionic-cache": "^3.1.3",
+    "ionicons": "3.0.0",
+    "angular-calendar": "0.24.1",
+    "angular2-notifications": "^1.0.4",
+    "angular-webstorage-service": "^1.0.2",
+    "bootstrap": "^4.1.3",
+    "cpx": "^1.5.0",
+    "date-fns": "^1.29.0",
+    "font-awesome": "^4.7.0",
+    "ng-drag-drop": "^5.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
@@ -41,6 +56,10 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
+    "@compodoc/compodoc": "^1.1.5",
+    "@types/date-fns": "^2.6.0",
+    "typedoc": "^0.12.0",
+    "ng-packagr": "^3.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~2.9.2"
