-[INFINITY] Organized the new module shared and added some of the core files needed for the first compilation.
Former-commit-id: e36b209e6855fc7b4e8f624643d69f033f260fd3

--- a/NeoCom.Infinity/tsconfig.json
+++ b/NeoCom.Infinity/tsconfig.json
@@ -19,8 +19,8 @@
     ],
     "paths": {
       "@app": ["src/app/*"],
-      "@loginapp": ["projects/NeoCom-Login/src/app/*"],
-      "@shared": ["src/shared/**"],
+      "@shared": ["src/app/modules/shared/*"],
+      "@loginapp": ["projects/NeoCom-Login/src/app/*"]
     }
   }
 }
