--- a/Neocom.MicroServices/src/main/resources/properties/runtime.properties
+++ b/Neocom.MicroServices/src/main/resources/properties/runtime.properties
@@ -13,3 +13,7 @@ R.runtime.development=true
 R.runtime.mockdata=true
 R.runtime.mockdata.location=mockdata/
 R.runtime.debuglevel=true
+
+P.runtime.mode.development=true
+P.runtime.security.handlers=off
+P.runtime.security.headers=off
