--- a/Neocom.MicroServices/src/main/resources/properties/runtime.properties
+++ b/Neocom.MicroServices/src/main/resources/properties/runtime.properties
@@ -8,9 +8,10 @@
 #               the source for the specific functionality for the backend services.
 # RUNTIME.PROPERTIES
 # Definition of properties that set if we are running on development, production or mock data.
+R.runtime.platform=SpringBoot
 R.runtime.appname=./NeoCom.Infinity
 R.runtime.development=true
-R.runtime.mockdata=true
+R.runtime.mockdata=false
 R.runtime.mockdata.location=mockdata/
 R.runtime.debuglevel=true
 
