--- a/Neocom.MicroServices/src/main/resources/properties/runtime.properties
+++ b/Neocom.MicroServices/src/main/resources/properties/runtime.properties
@@ -15,6 +15,8 @@ R.runtime.mockdata=false
 R.runtime.mockdata.location=mockdata/
 R.runtime.debuglevel=true
 
+R.runtime.loadseeddata.credentials = false
+
 P.runtime.mode.development=true
 P.runtime.security.handlers=off
 P.runtime.security.headers=off
