-[BACKEND] Added a new entry point to get the pilot Fittings. -[BACKEND] During the development we cannot lost the sessions because this means that any server restart will clear the session list. The session list  should be saved to disk and read back on startup.
Former-commit-id: 4f202ef833ff0bd3c56574b7a9b4611fc0fec40c

--- a/Neocom.MicroServices/src/main/resources/properties/runtime.properties
+++ b/Neocom.MicroServices/src/main/resources/properties/runtime.properties
@@ -20,3 +20,5 @@ R.runtime.loadseeddata.credentials = false
 P.runtime.mode.development=true
 P.runtime.security.handlers=off
 P.runtime.security.headers=off
+
+R.runtime.session.savedata=true
