-[BACKEND] Adding a second way to download the Eve item information to select the right data to be cached on the frontend.
Former-commit-id: f4ff36df4910f3272e696479203dc89314d2ecea

--- a/Neocom.MicroServices/src/main/resources/properties/runtime.properties
+++ b/Neocom.MicroServices/src/main/resources/properties/runtime.properties
@@ -22,3 +22,4 @@ P.runtime.security.handlers=off
 P.runtime.security.headers=off
 
 R.runtime.session.savedata=true
+R.runtime.session.savedata.filename=Session.data
