--- a/Neocom.MicroServices/build.gradle
+++ b/Neocom.MicroServices/build.gradle
@@ -169,8 +169,8 @@ ext {
 dependencies {
     // P R O J E C T    D E P E N D E N C I E S
 //    implementation project(path: ':ESI.SwaggerApi')
-    implementation project(path: ':NeoCom.Model')
-    implementation project(path: ':NeoCom.DataManagement')
+//    implementation project(path: ':NeoCom.Model')
+//    implementation project(path: ':NeoCom.DataManagement')
 
     // L O C A L    L I B R A R I E S
 //    implementation 'org.dimensinfin:CoreBase.core:2.2.0'
@@ -178,8 +178,8 @@ dependencies {
 //    implementation files('libs/CoreBase.core-2.0.3.jar')
     implementation 'org.dimensinfin:CoreBase.core:2.2.0'
     implementation 'org.dimensinfin:ESI.SwaggerApi:3.0.0'
-//    implementation 'org.dimensinfin:NeoCom.Model:0.13.POC'
-//    implementation 'org.dimensinfin:NeoCom.DataManagement:0.13.POC'
+    implementation 'org.dimensinfin:NeoCom.Model:0.14.0'
+    implementation 'org.dimensinfin:NeoCom.DataManagement:0.14.0'
 
     // M O D U L E    D E P E N D E N C I E S
     // S P R I N G B O O T
