-[REFACTOR] Updated mock data to reflect the new Location class name. -[PORTAL] New project for a web portal to integrate static code with angular and background server.
Former-commit-id: 840b428b388dad7a6945755b0f736464b12c405c

--- a/Neocom.MicroServices/.gitignore
+++ b/Neocom.MicroServices/.gitignore
@@ -34,7 +34,7 @@ out/
 #gradlew.bat
 
 ### Project file exceptions
-#.idea/workspace.xml
 #privatelibs/
 #libs/
 src/main/resources/static/
+NeoCom.Infinity/
