--- a/Neocom.MicroServices/src/test/resources/docker/docker-compose.yml
+++ b/Neocom.MicroServices/src/test/resources/docker/docker-compose.yml
@@ -2,9 +2,9 @@ version: '3'
 services:
   postgres:
     image: "postgres:11.2"
+    ports:
+      - "5432:5432"
     environment:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=neocom
       - POSTGRES_PASSWORD=01.Alpha
-    volumes:
-      - $HOME/docker/volumes/postgres:/var/lib/postgresql/data
