--- a/NeoCom.Infinity.Frontend/package.json
+++ b/NeoCom.Infinity.Frontend/package.json
@@ -7,7 +7,16 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "compodoc": "compodoc -p tsconfig.json --theme laravel",
+    "typedoc": "typedoc --mode modules -module commonjs --exclude **/*.spec.ts --out docs/typedoc src/app",
+    "start:dev": "ng serve --progress --proxy-config proxy.conf.json",
+    "start:aot": "ng serve --aot --progress --public-host neocom.infinity.dimensinfin.org --proxy-config proxy.conf.json",
+    "build:dev": "ng build",
+    "build:prod": "ng build --aot --prod --configuration production",
+    "test:dev": "ng test --code-coverage --source-map --watch --progress ",
+    "test:prod": "ng test --watch=false --no-progress --browsers=ChromeHeadlessCI",
+    "e2e": "ng e2e --port 4300",
+    "e2e:atdd": "ng e2e --port 4300 --protractor-config e2e/protractor-cucumber.conf.js"
   },
   "private": true,
   "dependencies": {
@@ -19,29 +28,29 @@
     "@angular/platform-browser": "~8.2.3",
     "@angular/platform-browser-dynamic": "~8.2.3",
     "@angular/router": "~8.2.3",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "rxjs": "6.4.0",
+    "tslib": "1.10.0",
+    "zone.js": "0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.1",
-    "@angular/cli": "~8.3.1",
-    "@angular/compiler-cli": "~8.2.3",
-    "@angular/language-service": "~8.2.3",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular-devkit/build-angular": "0.803.1",
+    "@angular/cli": "8.3.1",
+    "@angular/compiler-cli": "8.2.3",
+    "@angular/language-service": "8.2.3",
+    "@types/node": "8.9.4",
+    "@types/jasmine": "3.3.8",
+    "@types/jasminewd2": "2.0.3",
     "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
+    "jasmine-core": "3.4.0",
+    "jasmine-spec-reporter": "4.2.1",
+    "karma": "4.1.0",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-coverage-istanbul-reporter": "2.0.1",
+    "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "protractor": "5.4.0",
+    "ts-node": "7.0.0",
+    "tslint": "5.15.0",
+    "typescript": "3.5.3"
   }
 }
