--- a/NeoCom.Infinity.Frontend/package.json
+++ b/NeoCom.Infinity.Frontend/package.json
@@ -28,6 +28,10 @@
     "@angular/platform-browser": "~8.2.3",
     "@angular/platform-browser-dynamic": "~8.2.3",
     "@angular/router": "~8.2.3",
+    "@types/chai": "4.2.2",
+    "@types/cucumber": "4.0.7",
+    "chai": "4.2.0",
+    "protractor-cucumber-framework": "6.1.3",
     "rxjs": "6.4.0",
     "tslib": "1.10.0",
     "zone.js": "0.9.1"
@@ -37,10 +41,11 @@
     "@angular/cli": "8.3.1",
     "@angular/compiler-cli": "8.2.3",
     "@angular/language-service": "8.2.3",
-    "@types/node": "8.9.4",
     "@types/jasmine": "3.3.8",
     "@types/jasminewd2": "2.0.3",
+    "@types/node": "8.9.4",
     "codelyzer": "^5.0.0",
+    "cucumber": "5.1.0",
     "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "4.1.0",
