--- a/NeoCom.Infinity.Frontend/package.json
+++ b/NeoCom.Infinity.Frontend/package.json
@@ -29,10 +29,9 @@
     "@angular/platform-browser": "~8.2.3",
     "@angular/platform-browser-dynamic": "~8.2.3",
     "@angular/router": "~8.2.3",
-    "@types/chai": "4.2.2",
-    "@types/cucumber": "4.0.7",
-    "chai": "4.2.0",
-    "protractor-cucumber-framework": "6.1.3",
+    "bootstrap": "4.3.1",
+    "font-awesome": "4.7.0",
+    "ng-drag-drop": "5.0.0",
     "rxjs": "6.4.0",
     "tslib": "1.10.0",
     "zone.js": "0.9.1"
@@ -54,6 +53,10 @@
     "karma-coverage-istanbul-reporter": "2.0.1",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "@types/chai": "4.2.2",
+    "@types/cucumber": "4.0.7",
+    "chai": "4.2.0",
+    "protractor-cucumber-framework": "6.1.3",
     "protractor": "5.4.0",
     "protractor-console-plugin": "^0.1.1",
     "protractor-multiple-cucumber-html-reporter-plugin": "^1.8.1",
