--- a/NeoCom.Infinity.Backend/build.gradle
+++ b/NeoCom.Infinity.Backend/build.gradle
@@ -1,23 +1,44 @@
+// - P L U G I N S
 plugins {
     id 'groovy'
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.41'
+    id 'org.springframework.boot' version '2.1.7.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 }
+apply plugin: 'maven-publish'
 
-group 'org.dimensinfin.eveonline'
-version '1.0-SNAPSHOT'
+group = 'org.dimensinfin.eveonline'
+version = '1.0-SNAPSHOT'
+archivesBaseName = 'NeoCom.MicroServices'
 
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
+    mavenLocal()
     mavenCentral()
+    google()
+    jcenter()
+    maven { url 'https://jitpack.io' }
 }
 
-dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.3.11'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+//--- S P R I N G B O O T
+springBoot {
+    mainClassName = 'org.dimensinfin.eveonline.neocom.NeoComMicroServiceApplication'
+    buildInfo {
+        properties {
+            artifact = archivesBaseName
+            version = version
+            group = group
+            name = archivesBaseName
+        }
+    }
 }
+
+// - A D D I T I O N A L   C O N F I G U R A T I O N
+apply from: './dependencies.gradle'
+
 
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
