-[CONFIGURATION] Add the code coverage functionality.
Former-commit-id: 14bab71e3c93e8ffecdddafdd329216dd49dc226

--- a/NeoCom.Infinity.Frontend/tsconfig.spec.json
+++ b/NeoCom.Infinity.Frontend/tsconfig.spec.json
@@ -11,8 +11,8 @@
       "@interfaces/*": ["app/modules/shared/interfaces/*"],
       "@models/*": ["app/modules/shared/models/*"],
       "@renders/*": ["app/modules/shared/renders/*"],
-      "@app/*": ["app/*"],
-      "@env/*": ["environments/*"]
+      "@app/*": ["src/app/*"],
+      "@env/*": ["src/environments/*"]
     }
   },
   "files": [
