--- a/NeoCom.Infinity.Frontend/package.json
+++ b/NeoCom.Infinity.Frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "neo-com-infinity",
-  "version": "0.0.0",
+  "name": "neocom-infinity",
+  "version": "0.16.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
