-[PROJECT] Added dependencies and the code to copy the setup from other projects.
Former-commit-id: 289adc79120cbee14ad14c4417c49b398ca7a4f0

--- a/NeoCom.Infinity.Backend/build.gradle
+++ b/NeoCom.Infinity.Backend/build.gradle
@@ -38,7 +38,7 @@ springBoot {
 
 // - A D D I T I O N A L   C O N F I G U R A T I O N
 apply from: './dependencies.gradle'
-
+apply from: './tasks.gradle'
 
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
