--- a/NeoCom.Infinity.Backend/build.gradle
+++ b/NeoCom.Infinity.Backend/build.gradle
@@ -1,8 +1,8 @@
 // - P L U G I N S
 plugins {
-    id 'groovy'
+//    id 'groovy'
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.41'
+//    id 'org.jetbrains.kotlin.jvm' version '1.3.41'
     id 'org.springframework.boot' version '2.1.7.RELEASE'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 }
@@ -40,9 +40,9 @@ springBoot {
 apply from: './dependencies.gradle'
 apply from: './tasks.gradle'
 
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
+//compileKotlin {
+//    kotlinOptions.jvmTarget = "1.8"
+//}
+//compileTestKotlin {
+//    kotlinOptions.jvmTarget = "1.8"
+//}
