--- a/NeoCom.Infinity.Backend/dependencies.gradle
+++ b/NeoCom.Infinity.Backend/dependencies.gradle
@@ -18,9 +18,11 @@ ext {
 // - D E P E N D E N C I E S
 dependencies {
     // C O R E
-    compile "org.slf4j:slf4j-simple:$loggerVersion"
+    implementation 'net.logstash.logback:logstash-logback-encoder:4.11'
     implementation "joda-time:joda-time:$jodaTimeVersion"
     implementation 'org.apache.commons:commons-lang3:3.9'
+    implementation 'commons-codec:commons-codec:1.11'
+    implementation 'com.annimon:stream:1.1.9'
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion" // OAuth2 authentication
     implementation "com.squareup.retrofit2:converter-jackson:$retrofitVersion" // HTTP encapsulation and swagger support
     // D A T A B A S E - R E D I S
