--- a/NeoCom.Infinity.Backend/.gitignore
+++ b/NeoCom.Infinity.Backend/.gitignore
@@ -1,40 +1,10 @@
-### MAVEN ###
-!.mvn/wrapper/maven-wrapper.jar
+# IntelliJ IDEA ignored files
+.idea/workspace.xml
 
-### STS ###
-.apt_generated
-.factorypath
-.springBeans
+# Project generated ignored files
+.gradle/
 
-### IntelliJ IDEA ###
-#.idea
-*.iws
-*.iml
-*.ipr
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/libraries/
-/.gradle/
+# Project not required files set to be ignored
+backend/libs/
+backend.AcceptanceTest/libs/
 
-### NetBeans ###
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
-
-### NeoCom ###
-classes/
-target/
-out/
-
-## Heroku gradle additions ##
-#gradlew
-#gradlew.bat
-
-### Project file exceptions
-#privatelibs/
-#libs/
-src/main/resources/static/
-NeoCom.Infinity/
