--- a/NeoCom.Infinity.Backend/backend/build.gradle
+++ b/NeoCom.Infinity.Backend/backend/build.gradle
@@ -10,3 +10,7 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
 }
+
+dependencies {
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+}
