--- a/NeoCom.Infinity.Backend/settings.gradle
+++ b/NeoCom.Infinity.Backend/settings.gradle
@@ -1,8 +1,4 @@
-rootProject.name = 'NeoCom.MicroServices'
+rootProject.name = 'neocom.infinity'
+include 'backend'
+include 'backend.AcceptanceTest'
 
-//include ':ESI.SwaggerApi'
-//project(':ESI.SwaggerApi').projectDir = new File('D:\\Development\\Libraries Base\\NeoCom-DM\\NeoCom-DataMngmt-0.12.x\\ESI.SwaggerApi')
-//include ':NeoCom.Model'
-//project(':NeoCom.Model').projectDir = new File('D:\\\\Development\\\\NeoComProjects\\\\NeoComLibrary\\\\NeoCom-DataMngmt-0.14.x\\NeoCom.Model')
-//include ':NeoCom.DataManagement'
-//project(':NeoCom.DataManagement').projectDir = new File('D:\\Development\\NeoComProjects\\NeoComLibrary\\NeoCom-DataMngmt-0.14.x\\NeoCom.DataManagement')
