-[BACKEND] Application starts. Removed still unused dependencies until configured and required.
Former-commit-id: f04cbd1206b37834fa205254cbd3d5fdbb065693

--- a/NeoCom.Infinity.Backend/.gitignore
+++ b/NeoCom.Infinity.Backend/.gitignore
@@ -3,6 +3,8 @@
 
 # Project generated ignored files
 .gradle/
+backend/build/
+baeckend.AcceptanceTest/build/
 
 # Project not required files set to be ignored
 backend/libs/
