--- a/NeoCom.Infinity.Backend/backend/build.gradle
+++ b/NeoCom.Infinity.Backend/backend/build.gradle
@@ -1,12 +1,16 @@
+// - P L U G I N S
 plugins {
 	id 'org.springframework.boot' version '2.1.8.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 	id 'java'
 }
+apply plugin: 'maven-publish'
 
 group = 'org.dimensinfin.eveonline'
 version = '0.0.1-SNAPSHOT'
+archivesBaseName = 'NeoCom.MicroServices'
 sourceCompatibility = '11'
+//targetCompatibility = 1.8
 
 configurations {
 	developmentOnly
@@ -16,27 +20,13 @@ configurations {
 }
 
 repositories {
+	mavenLocal()
 	mavenCentral()
+	google()
+	jcenter()
+	maven { url 'https://jitpack.io' }
 }
 
-ext {
-	set('springCloudVersion', "Greenwich.SR2")
-}
-
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-	implementation 'org.springframework.boot:spring-boot-starter-web-services'
-	implementation 'org.liquibase:liquibase-core'
-//	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'org.postgresql:postgresql'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
-
-dependencyManagement {
-	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-	}
-}
+// - A D D I T I O N A L   C O N F I G U R A T I O N
+apply from: './dependencies.gradle'
+//apply from: './tasks.gradle'
