--- a/NeoCom.Infinity.Backend/backend/dependencies.gradle
+++ b/NeoCom.Infinity.Backend/backend/dependencies.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation files('libs/jeveassets.3.1.2.jar')
     implementation 'org.dimensinfin:CoreBase.core:3.2.0'
     implementation 'org.dimensinfin:ESI.SwaggerApi:4.0.1'
+//    implementation 'org.dimensinfin:NeoCom.DataManagement:0.15.0'
 //    implementation project(':NeoCom.DataManagement')
 }
 
