-[BACKEND] Install the log formatter. -[BACKEND] Configure the current code to use wrapped components and auto wiring.
Former-commit-id: cf1ac9ce57ef4ba12cd7fa12c369533fbecf6d2d

--- a/NeoCom.Infinity.Backend/backend/dependencies.gradle
+++ b/NeoCom.Infinity.Backend/backend/dependencies.gradle
@@ -60,7 +60,7 @@ dependencies {
     implementation 'org.dimensinfin:CoreBase.core:3.2.0'
     implementation 'org.dimensinfin:ESI.SwaggerApi:4.0.1'
 //    implementation 'org.dimensinfin:NeoCom.DataManagement:0.15.0'
-//    implementation project(':NeoCom.DataManagement')
+    implementation project(':NeoCom.DataManagement')
 }
 
 // - U N I T   T E S T I N G
