--- a/NeoCom.Infinity.Backend/settings.gradle
+++ b/NeoCom.Infinity.Backend/settings.gradle
@@ -2,5 +2,5 @@ rootProject.name = 'neocom.infinity'
 include 'backend'
 include 'backend.AcceptanceTest'
 
-//include ':NeoCom.DataManagement'
-//project(':NeoCom.DataManagement').projectDir = new File('/home/adam/Development/NeoCom/neocom-datamanagement/NeoCom.DataManagement')
+include ':NeoCom.DataManagement'
+project(':NeoCom.DataManagement').projectDir = new File('/home/adam/Development/NeoCom/neocom-datamanagement/NeoCom.DataManagement')
