--- a/NeoCom.Infinity.Backend/backend/dependencies.gradle
+++ b/NeoCom.Infinity.Backend/backend/dependencies.gradle
@@ -40,15 +40,15 @@ dependencies {
     implementation 'com.annimon:stream:1.1.9'
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion" // OAuth2 authentication
     implementation "com.squareup.retrofit2:converter-jackson:$retrofitVersion" // HTTP encapsulation and swagger support
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-joda:$jacksonVersion"
     // D A T A B A S E - R E D I S
     implementation 'org.redisson:redisson:3.8.2'
     implementation 'com.vladmihalcea:hibernate-types-52:2.4.2'
     // D A T A B A S E
-//    implementation 'org.liquibase:liquibase-core:3.6.2'
-    implementation "com.j256.ormlite:ormlite-core:$ormliteVersion"
-//    implementation 'org.postgresql:postgresql:42.2.5'
-    runtimeOnly 'org.postgresql:postgresql'
-    compile 'javax.persistence:javax.persistence-api:2.2'
+    implementation "com.j256.ormlite:ormlite-jdbc:$ormliteVersion"
+    implementation 'javax.persistence:javax.persistence-api:2.2'
+    implementation 'org.postgresql:postgresql:42.2.5'
+    implementation 'org.liquibase:liquibase-core:3.8.0'
     // - M E T R I C S
     implementation "io.micrometer:micrometer-core:$micrometerVersion"
     implementation "io.micrometer:micrometer-registry-prometheus:$micrometerVersion"
@@ -65,12 +65,9 @@ dependencies {
 
 // - U N I T   T E S T I N G
 dependencies {
-
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
     // - S P R I N G B O O T
-//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//    testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'com.h2database:h2:1.4.194'
 
     // - C O R E
     testImplementation 'junit:junit:4.12'
