-[BACKEND] Reset the project to use AndroidStudio as development tool. Seems that IntelliJ has problems with multimodule projects on latest version.
Former-commit-id: 07a1e80add850d94044525ce104e63fe1eb31925

--- a/NeoCom.Infinity.Backend/.gitignore
+++ b/NeoCom.Infinity.Backend/.gitignore
@@ -1,5 +1,11 @@
 # IntelliJ IDEA ignored files
+*.iml
+.idea/modules.xml
 .idea/workspace.xml
+.idea/navEditor.xml
+.idea/assetWizardSettings.xml
+.idea/caches/
+.idea/libraries/
 
 # Project generated ignored files
 .gradle/
@@ -10,4 +16,4 @@ baeckend.AcceptanceTest/build/
 # Project not required files set to be ignored
 backend/libs/
 backend.AcceptanceTest/libs/
-
+app/
