--- a/NeoCom.Infinity.Backend/build.gradle
+++ b/NeoCom.Infinity.Backend/build.gradle
@@ -1,12 +1,27 @@
-plugins {
-    id 'java'
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    repositories {
+        google()
+        jcenter()
+        
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.5.0'
+        
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
 }
 
-group 'org.dimensinfin.eveonline'
-version '1.0-SNAPSHOT'
+allprojects {
+    repositories {
+        google()
+        jcenter()
+        
+    }
+}
 
-sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
