--- a/NeoCom.Infinity.Backend/settings.gradle
+++ b/NeoCom.Infinity.Backend/settings.gradle
@@ -1,6 +1,2 @@
-rootProject.name = 'neocom.infinity'
-include 'backend'
-include 'backend.AcceptanceTest'
-
-include ':NeoCom.DataManagement'
-project(':NeoCom.DataManagement').projectDir = new File('/home/adam/Development/NeoCom/neocom-datamanagement/NeoCom.DataManagement')
+include ':app', ':backend-AcceptanceTest', ':backend'
+rootProject.name='NeoCom.Infinity'
