-[BACKEND] Setting configuration to setup and start the database. Replacing the data management library.
Former-commit-id: c387deda7f5953ee78b3e23dae5410716dcea467

--- a/NeoCom.Infinity.Backend/settings.gradle
+++ b/NeoCom.Infinity.Backend/settings.gradle
@@ -1,2 +1,7 @@
-include ':app', ':backend-AcceptanceTest', ':backend'
-rootProject.name='NeoCom.Infinity'
+include ':app'
+include ':backend'
+include ':backend-AcceptanceTest'
+
+//include ':NeoCom.DataManagement'
+//project(':NeoCom.DataManagement').projectDir = new File('/home/adam/Development/NeoCom/neocom-datamanagement/NeoCom.DataManagement')
+rootProject.name = 'NeoCom.Infinity.Backend'
