--- a/NeoCom.Infinity.Backend/backend/build.gradle
+++ b/NeoCom.Infinity.Backend/backend/build.gradle
@@ -1,18 +1,34 @@
-buildscript {
-    ext {
-        springBootVersion = '2.1.1.RELEASE'
-    }
-    repositories {
-        mavenLocal()
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-    }
+// - P L U G I N S
+plugins {
+    id 'org.springframework.boot' version '2.1.8.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+    id 'java'
 }
-apply plugin: 'java'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
+apply plugin: 'maven-publish'
+
+group = 'org.dimensinfin.eveonline'
+version = '0.0.1-SNAPSHOT'
+archivesBaseName = 'NeoCom.MicroServices'
+sourceCompatibility = 1.8
+//targetCompatibility = 1.8
+
+
+
+//buildscript {
+//    ext {
+//        springBootVersion = '2.1.1.RELEASE'
+//    }
+//    repositories {
+//        mavenLocal()
+//        mavenCentral()
+//    }
+//    dependencies {
+//        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+//    }
+//}
+//apply plugin: 'java'
+//apply plugin: 'org.springframework.boot'
+//apply plugin: 'io.spring.dependency-management'
 
 //android {
 //    compileSdkVersion 28
@@ -32,23 +48,5 @@ apply plugin: 'io.spring.dependency-management'
 //        }
 //    }
 //}
-
-// - P R O D U C T   V E R S I O N S
-ext {
-    jacksonVersion = '2.9.8'
-    ormliteVersion = '4.48'
-    micrometerVersion = '1.1.0'
-}
-
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-//    implementation "org.springframework.boot:spring-boot-starter-actuator:$springBootVersion"
-    implementation "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
-//    implementation "org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion"
-
-//    implementation 'androidx.appcompat:appcompat:1.0.2'
-    testImplementation 'junit:junit:4.12'
-//    androidTestImplementation 'androidx.test:runner:1.1.1'
-//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-}
+// - A D D I T I O N A L   C O N F I G U R A T I O N
+apply from: './dependencies.gradle'
