--- a/NeoCom.Infinity.Backend/build.gradle
+++ b/NeoCom.Infinity.Backend/build.gradle
@@ -1,27 +1,44 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
+    ext.kotlin_version = '1.3.41'
     repositories {
+        mavenLocal()
+        mavenCentral()
         google()
         jcenter()
-        
+        maven { url 'https://jitpack.io' }
+        maven { url "https://kotlin.bintray.com/kotlinx/" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
-        
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:4.3.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 allprojects {
     repositories {
+        mavenLocal()
+        mavenCentral()
         google()
         jcenter()
-        
+        maven { url 'https://jitpack.io' }
+        maven { url "https://kotlin.bintray.com/kotlinx/" }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+// - P R O D U C T   V E R S I O N S
+//ext {
+//    supportLibraryVersion = '29.0.0'
+//    jodaTimeVersion = '2.3'
+//    loggerVersion = '1.7.26'
+//    jacksonVersion = '2.9.4'
+//    fasterxmlJackson = '2.9.4'
+//    ormliteVersion = '4.48'
+//    powermockVersion = '2.0.2'
+//    retrofitVersion = '2.5.0'
+//}
